apps/jupyterhub/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: jupyterhub.ral.uksrc.org
    http:
      paths:
        - backend:
            service:
              name: proxy-public
              port:
                name: http
          path: /
          pathType: Prefix
  tls:
  - hosts:
    - jupyterhub.ral.uksrc.org
    secretName: jupyterhub-ingress-cert
